# sqlitecppm

./: CMakeLists.txt  LICENSE  README.md  hello.cpp  speech.cppm  speech_english.cppm  speech_spanish.cppm  sqlite.capi3_test.cpp
.github/workflows/: build.yaml
cmake/: CodeCoverage.cmake  CustomConfigurationType.cmake  SQLitecppmConfig.cmake.in
include/sqlite/: sqlite.capi3.cppm
scripts/: collect_llvm_coverage.sh  lcovrc
tests/: CMakeLists.txt  sqlite.capi3_test.cpp
